@@ -1,3 +1,7 @@
+2003-02-24	Ujwal S. Sathyam <ujwal@setlurgroup.com>
+
+    * Fixed and simplified screen updating code.
+
 2003-02-23	fabian
     * Changed version number to 0.6.4
     * Updated help files
